# docs/swagger.json
@@ -2390,6 +2390,23 @@
                 }
             }
         },
+        "model.DefaultDevice": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "description": "名称",
+                    "type": "string"
+                },
+                "product_id": {
+                    "description": "产品ID",
+                    "type": "string"
+                },
+                "slave": {
+                    "description": "从站号",
+                    "type": "integer"
+                }
+            }
+        },
         "model.Device": {
             "type": "object",
             "properties": {
@@ -2639,6 +2656,12 @@
                 "created": {
                     "description": "创建时间",
                     "type": "string"
+                },
+                "defaults": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.DefaultDevice"
+                    }
                 },
                 "desc": {
                     "description": "说明",
